add: ConnectionManager, PropertiesUtil, entity, postgressql.jar